Added the table of contents to the style.css

--- a/style.css
+++ b/style.css
@@ -11,3 +11,57 @@
  Tags:         responsive-layout, one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar, custom-background, custom-colors, featured-images, full-width-template, post-formats, rtl-language-support, theme-options, threaded-comments, translation-ready
  Text Domain:  Divi-Child
 */
+
+/* --------------------------------------------------------------
+>>> TABLE OF CONTENTS:
+
+# Universal
+    - Import Fonts
+    - Media Queries
+# Header & Nav
+	- Media Queries
+# Home
+	- Media Queries
+# 404
+	- Media Queries
+# Footer
+	- Media Queries
+
+>>> END
+-------------------------------------------------------------- */
+
+/* ---------------------------------------
+# Universal
+--------------------------------------- */
+
+/* Import Fonts */
+
+/* Media Queries */
+
+/* ---------------------------------------
+# Header & Nav
+--------------------------------------- */
+
+/* Media Queries */
+
+/* ---------------------------------------
+# Home
+--------------------------------------- */
+
+/* Media Queries */
+
+/* ---------------------------------------
+# 404
+--------------------------------------- */
+
+/* Media Queries */
+
+/* ---------------------------------------
+# Footer
+--------------------------------------- */
+
+/* Media Queries */
+
+/* --------------------------------------------------------------
+>>> END - Theme Styles
+-------------------------------------------------------------- */
